[ADD]Net Rules function
[DEL] delete v1 api/interface

[REV] optimize structs of api router；update swagger json
