# pkg/api/controller/serviceAction.go
@@ -1,184 +1,182 @@
-
 // RAINBOND, Application Management Platform
 // Copyright (C) 2014-2017 Goodrain Co., Ltd.
- 
+
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
 // the Free Software Foundation, either version 3 of the License, or
 // (at your option) any later version. For any non-GPL usage of Rainbond,
 // one or multiple Commercial Licenses authorized by Goodrain Co., Ltd.
 // must be obtained first.
- 
+
 // This program is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 // GNU General Public License for more details.
- 
+
 // You should have received a copy of the GNU General Public License
 // along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 package controller
 
 import (
+	"fmt"
+	"net/http"
+
 	"github.com/goodrain/rainbond/pkg/api/middleware"
 	api_model "github.com/goodrain/rainbond/pkg/api/model"
 	"github.com/goodrain/rainbond/pkg/event"
 	"github.com/goodrain/rainbond/pkg/worker/discover/model"
-	"fmt"
-	"net/http"
 
-	validator "github.com/thedevsaddam/govalidator"
-	dbmodel "github.com/goodrain/rainbond/pkg/db/model"
-	"github.com/goodrain/rainbond/pkg/api/handler"
-	httputil "github.com/goodrain/rainbond/pkg/util/http"
-	tutil "github.com/goodrain/rainbond/pkg/util"
-	"github.com/Sirupsen/logrus"
 	"time"
+
+	"github.com/Sirupsen/logrus"
+	"github.com/goodrain/rainbond/pkg/api/handler"
 	"github.com/goodrain/rainbond/pkg/db"
+	dbmodel "github.com/goodrain/rainbond/pkg/db/model"
+	tutil "github.com/goodrain/rainbond/pkg/util"
+	httputil "github.com/goodrain/rainbond/pkg/util/http"
+	validator "github.com/thedevsaddam/govalidator"
 )
 
-const TIMELAYOUT  = "2006-01-02T15:04:05"
+//TIMELAYOUT TIMELAYOUT
+const TIMELAYOUT = "2006-01-02T15:04:05"
 
-
-func createEvent(serviceID,optType,tenantID,deployVersion string) (*dbmodel.ServiceEvent,int,error)  {
-	eventID:=tutil.NewUUID()
-	logrus.Infof("creating event,id is %s",eventID)
-	event:=dbmodel.ServiceEvent{}
-	event.EventID=eventID
-	event.ServiceID=serviceID
-	event.OptType=optType
-	event.TenantID=tenantID
-	now:=time.Now()
+func createEvent(serviceID, optType, tenantID, deployVersion string) (*dbmodel.ServiceEvent, int, error) {
+	eventID := tutil.NewUUID()
+	logrus.Infof("creating event,id is %s", eventID)
+	event := dbmodel.ServiceEvent{}
+	event.EventID = eventID
+	event.ServiceID = serviceID
+	event.OptType = optType
+	event.TenantID = tenantID
+	now := time.Now()
 	timeNow := now.Format(TIMELAYOUT)
-	event.StartTime=timeNow
-	event.UserName="system"
-	version:=deployVersion
-	oldDeployVersion:=""
-	if deployVersion=="" {
-		service,err:=db.GetManager().TenantServiceDao().GetServiceByID(serviceID)
+	event.StartTime = timeNow
+	event.UserName = "system"
+	version := deployVersion
+	oldDeployVersion := ""
+	if deployVersion == "" {
+		service, err := db.GetManager().TenantServiceDao().GetServiceByID(serviceID)
 		if err != nil {
-			return nil,3,nil
+			return nil, 3, nil
 		}
-		version=service.DeployVersion
+		version = service.DeployVersion
 	}
-	events,err:=db.GetManager().ServiceEventDao().GetEventByServiceID(serviceID)
+	events, err := db.GetManager().ServiceEventDao().GetEventByServiceID(serviceID)
 	if err != nil {
 
 	}
 	if len(events) != 0 {
-		latestEvent:=events[0]
-		oldDeployVersion=latestEvent.DeployVersion
+		latestEvent := events[0]
+		oldDeployVersion = latestEvent.DeployVersion
 	}
 
-	event.DeployVersion=version
-	event.OldDeployVersion=oldDeployVersion
+	event.DeployVersion = version
+	event.OldDeployVersion = oldDeployVersion
 
-	status,err:=checkCanAddEvent(serviceID)
+	status, err := checkCanAddEvent(serviceID)
 	if err != nil {
-		return nil,status,nil
+		return nil, status, nil
 	}
-	if status==0 {
+	if status == 0 {
 		db.GetManager().ServiceEventDao().AddModel(&event)
 		//todo add timmer auto timeout
 		go autoTimeOut(&event)
-		return &event,status,nil
-	}else {
-		return nil,status,nil
+		return &event, status, nil
 	}
+	return nil, status, nil
 }
 func autoTimeOut(event *dbmodel.ServiceEvent) {
 	var timer *time.Timer
 	//todo if 构建
-	if event.OptType=="build" {
-		timer=time.NewTimer(3*time.Minute)
-	}else {
-		timer=time.NewTimer(30*time.Second)
+	if event.OptType == "build" {
+		timer = time.NewTimer(3 * time.Minute)
+	} else {
+		timer = time.NewTimer(30 * time.Second)
 	}
 	for {
 		select {
 
 		case <-timer.C:
 			//时间到，检查是否完成，未完成设置为timeout
-			e,err:=db.GetManager().ServiceEventDao().GetEventByEventID(event.EventID)
+			e, err := db.GetManager().ServiceEventDao().GetEventByEventID(event.EventID)
 			if err != nil {
 				return
 			}
 			if e.FinalStatus == "" {
 				//未完成
 				e.FinalStatus = "timeout"
-				logrus.Warnf("event id:%s time out,",event.EventID)
-				err=db.GetManager().ServiceEventDao().UpdateModel(e)
-				return
-			}else {
+				logrus.Warnf("event id:%s time out,", event.EventID)
+				err = db.GetManager().ServiceEventDao().UpdateModel(e)
 				return
 			}
+			return
 
 		}
 	}
 }
-func checkCanAddEvent(s string) (int,error){
-	events,err:=db.GetManager().ServiceEventDao().GetEventByServiceID(s)
+func checkCanAddEvent(s string) (int, error) {
+	events, err := db.GetManager().ServiceEventDao().GetEventByServiceID(s)
 	if err != nil {
-		return 3,err
+		return 3, err
 	}
 	if len(events) == 0 {
 		//service 首个event
-		return 0,nil
+		return 0, nil
 	}
-	latestEvent:=events[0]
-	if latestEvent.FinalStatus=="" {
+	latestEvent := events[0]
+	if latestEvent.FinalStatus == "" {
 		//未完成
-		timeOut,err:=checkEventTimeOut(latestEvent)
+		timeOut, err := checkEventTimeOut(latestEvent)
 		if err != nil {
-			return 3,err
+			return 3, err
 		}
 		if timeOut {
 			//未完成，超时
-			return 1,nil
-		}else{
-			//未完成，未超时
-			return 2,nil
+			return 1, nil
 		}
-	}else{
-		//已完成
-		return 0,nil
+		//未完成，未超时
+		return 2, nil
 	}
+	//已完成
+	return 0, nil
 }
-func checkEventTimeOut(event *dbmodel.ServiceEvent) (bool,error) {
+
+func checkEventTimeOut(event *dbmodel.ServiceEvent) (bool, error) {
 	startTime := event.StartTime
-	start,err:=time.Parse(TIMELAYOUT,startTime)
-	if err!=nil {
-		return true,err
+	start, err := time.Parse(TIMELAYOUT, startTime)
+	if err != nil {
+		return true, err
 	}
-	if event.OptType == "deploy" || event.OptType == "create"{
+	if event.OptType == "deploy" || event.OptType == "create" {
 
-		end:=start.Add(3*time.Minute)
-		if (time.Now().After(end)){
+		end := start.Add(3 * time.Minute)
+		if time.Now().After(end) {
 			event.FinalStatus = "timeout"
-			err=db.GetManager().ServiceEventDao().UpdateModel(event)
-			return true,err
+			err = db.GetManager().ServiceEventDao().UpdateModel(event)
+			return true, err
 		}
 
-	}else {
-		end:=start.Add(30*time.Second)
-		if (time.Now().After(end)){
+	} else {
+		end := start.Add(30 * time.Second)
+		if time.Now().After(end) {
 			event.FinalStatus = "timeout"
-			err=db.GetManager().ServiceEventDao().UpdateModel(event)
-			return true,err
+			err = db.GetManager().ServiceEventDao().UpdateModel(event)
+			return true, err
 		}
 	}
 
-	return false,nil
+	return false, nil
 }
 
-func handleStatus(status int,err error,w http.ResponseWriter, r *http.Request){
-	if status!=0 {
+func handleStatus(status int, err error, w http.ResponseWriter, r *http.Request) {
+	if status != 0 {
 		logrus.Error("应用启动任务发送失败 "+err.Error(), map[string]string{"step": "callback", "status": "failure"})
 		if status == 1 {
 			httputil.ReturnError(r, w, 400, "last time out .")
 			return
 		}
-		if status == 2{
+		if status == 2 {
 			httputil.ReturnError(r, w, 400, "last event unfinish.")
 			return
 		}
@@ -186,6 +184,7 @@ func handleStatus(status int,err error,w http.ResponseWriter, r *http.Request){
 		return
 	}
 }
+
 //StartService StartService
 func (t *TenantStruct) StartService(w http.ResponseWriter, r *http.Request) {
 	// swagger:operation POST /v2/tenants/{tenant_name}/services/{service_alias}/start  v2 startService
@@ -221,9 +220,8 @@ func (t *TenantStruct) StartService(w http.ResponseWriter, r *http.Request) {
 	tenantID := r.Context().Value(middleware.ContextKey("tenant_id")).(string)
 	serviceID := r.Context().Value(middleware.ContextKey("service_id")).(string)
 
-
-	sEvent,status,err:=createEvent(serviceID,"start",tenantID,"")
-	handleStatus(status,err,w,r)
+	sEvent, status, err := createEvent(serviceID, "start", tenantID, "")
+	handleStatus(status, err, w, r)
 
 	eventID := sEvent.EventID
 
@@ -241,7 +239,7 @@ func (t *TenantStruct) StartService(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	logger.Info("应用启动任务发送成功 ", map[string]string{"step": "start-service", "status": "starting"})
-	httputil.ReturnSuccess(r,w,sEvent)
+	httputil.ReturnSuccess(r, w, sEvent)
 	return
 }
 
@@ -268,18 +266,10 @@ func (t *TenantStruct) StopService(w http.ResponseWriter, r *http.Request) {
 	//       "$ref": "#/responses/commandResponse"
 	//     description: 统一返回格式
 
-	logrus.Debugf("trans stop service")
-	//rules := validator.MapData{
-	//	//"event_id": []string{"required"},
-	//}
-	//_, ok := httputil.ValidatorRequestMapAndErrorResponse(r, w, rules, nil)
-	//if !ok {
-	//	return
-	//}
 	tenantID := r.Context().Value(middleware.ContextKey("tenant_id")).(string)
 	serviceID := r.Context().Value(middleware.ContextKey("service_id")).(string)
-	sEvent,status,err:=createEvent(serviceID,"stop",tenantID,"")
-	handleStatus(status,err,w,r)
+	sEvent, status, err := createEvent(serviceID, "stop", tenantID, "")
+	handleStatus(status, err, w, r)
 	//save event
 	eventID := sEvent.EventID
 	logger := event.GetManager().GetLogger(eventID)
@@ -296,7 +286,7 @@ func (t *TenantStruct) StopService(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	logger.Info("应用停止任务发送成功 ", map[string]string{"step": "stop-service", "status": "starting"})
-	httputil.ReturnSuccess(r,w,sEvent)
+	httputil.ReturnSuccess(r, w, sEvent)
 }
 
 //RestartService RestartService
@@ -332,8 +322,8 @@ func (t *TenantStruct) RestartService(w http.ResponseWriter, r *http.Request) {
 	//}
 	tenantID := r.Context().Value(middleware.ContextKey("tenant_id")).(string)
 	serviceID := r.Context().Value(middleware.ContextKey("service_id")).(string)
-	sEvent,status,err:=createEvent(serviceID,"restart",tenantID,"")
-	handleStatus(status,err,w,r)
+	sEvent, status, err := createEvent(serviceID, "restart", tenantID, "")
+	handleStatus(status, err, w, r)
 	//save event
 	eventID := sEvent.EventID
 	logger := event.GetManager().GetLogger(eventID)
@@ -350,7 +340,7 @@ func (t *TenantStruct) RestartService(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	logger.Info("应用重启任务发送成功 ", map[string]string{"step": "restart-service", "status": "starting"})
-	httputil.ReturnSuccess(r,w,sEvent)
+	httputil.ReturnSuccess(r, w, sEvent)
 	return
 }
 
@@ -389,8 +379,8 @@ func (t *TenantStruct) VerticalService(w http.ResponseWriter, r *http.Request) {
 	}
 	tenantID := r.Context().Value(middleware.ContextKey("tenant_id")).(string)
 	serviceID := r.Context().Value(middleware.ContextKey("service_id")).(string)
-	sEvent,status,err:=createEvent(serviceID,"update",tenantID,"")
-	handleStatus(status,err,w,r)
+	sEvent, status, err := createEvent(serviceID, "update", tenantID, "")
+	handleStatus(status, err, w, r)
 
 	eventID := sEvent.EventID
 	logger := event.GetManager().GetLogger(eventID)
@@ -410,7 +400,7 @@ func (t *TenantStruct) VerticalService(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	logger.Info("应用垂直升级任务发送成功 ", map[string]string{"step": "vertical-service", "status": "starting"})
-	httputil.ReturnSuccess(r,w,sEvent)
+	httputil.ReturnSuccess(r, w, sEvent)
 }
 
 //HorizontalService HorizontalService
@@ -446,8 +436,8 @@ func (t *TenantStruct) HorizontalService(w http.ResponseWriter, r *http.Request)
 	}
 	tenantID := r.Context().Value(middleware.ContextKey("tenant_id")).(string)
 	serviceID := r.Context().Value(middleware.ContextKey("service_id")).(string)
-	sEvent,status,err:=createEvent(serviceID,"update",tenantID,"")
-	handleStatus(status,err,w,r)
+	sEvent, status, err := createEvent(serviceID, "update", tenantID, "")
+	handleStatus(status, err, w, r)
 	//save event
 	eventID := sEvent.EventID
 	logger := event.GetManager().GetLogger(eventID)
@@ -465,7 +455,7 @@ func (t *TenantStruct) HorizontalService(w http.ResponseWriter, r *http.Request)
 		return
 	}
 	logger.Info("应用水平升级任务发送成功 ", map[string]string{"step": "horizontal-service", "status": "starting"})
-	httputil.ReturnSuccess(r,w,sEvent)
+	httputil.ReturnSuccess(r, w, sEvent)
 }
 
 //BuildService BuildService
@@ -559,8 +549,8 @@ func (t *TenantStruct) UpgradeService(w http.ResponseWriter, r *http.Request) {
 	tenantID := r.Context().Value(middleware.ContextKey("tenant_id")).(string)
 	serviceID := r.Context().Value(middleware.ContextKey("service_id")).(string)
 
-	sEvent,status,err:=createEvent(serviceID,"update",tenantID,data["deploy_version"].(string))
-	handleStatus(status,err,w,r)
+	sEvent, status, err := createEvent(serviceID, "update", tenantID, data["deploy_version"].(string))
+	handleStatus(status, err, w, r)
 
 	eventID := sEvent.EventID
 	logger := event.GetManager().GetLogger(eventID)
@@ -579,7 +569,7 @@ func (t *TenantStruct) UpgradeService(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	logger.Info("应用升级任务发送成功 ", map[string]string{"step": "upgrade-service", "status": "starting"})
-	httputil.ReturnSuccess(r,w,sEvent)
+	httputil.ReturnSuccess(r, w, sEvent)
 }
 
 //CheckCode CheckCode
@@ -696,15 +686,15 @@ func (t *TenantStruct) RollBack(w http.ResponseWriter, r *http.Request) {
 	}
 	tenantID := r.Context().Value(middleware.ContextKey("tenant_id")).(string)
 	serviceID := r.Context().Value(middleware.ContextKey("service_id")).(string)
-	sEvent,status,err:=createEvent(serviceID,"rollback",tenantID,data["deploy_version"].(string))
-	handleStatus(status,err,w,r)
+	sEvent, status, err := createEvent(serviceID, "rollback", tenantID, data["deploy_version"].(string))
+	handleStatus(status, err, w, r)
 	eventID := sEvent.EventID
 	logger := event.GetManager().GetLogger(eventID)
 	defer event.CloseManager()
 	rs := &api_model.RollbackStruct{
-		TenantID:      tenantID,
-		ServiceID:     serviceID,
-		EventID:       eventID,
+		TenantID:  tenantID,
+		ServiceID: serviceID,
+		EventID:   eventID,
 		//EventID:       data["event_id"].(string),
 		//todo
 		DeployVersion: data["deploy_version"].(string),
